--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       content="Facets, Facets!, Big Tent Games, Games, Casual game, Puzzle game, Word game, Boardgame, Wil Voss" />
     <meta name="description" content="Facets: A Puzzle Game of Words and Wits!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.1.83" />
+    <link rel="manifest" href="manifest.webmanifest?2.1.84" />
 
     <link rel="apple-touch-icon" sizes="120x120" href="images/icon180.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="images/icon180.png" />
@@ -39,9 +39,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="128x128" href="favicon.png" />
 
-    <link rel="stylesheet" href="styles/normalize.css?2.1.83" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.1.83" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.1.83" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.1.84" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.1.84" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.1.84" media="screen" />
   </head>
 
   <body>
@@ -62,19 +62,57 @@
       </preload>
       <link rel="stylesheet"
         v-if="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme)"
-        href="styles/light.css?2.1.83" media="screen" />
-      <link rel="stylesheet" v-if="appStateUseFlower || userSettingsUsesSimplifiedTheme" href="styles/simple.css?2.1.83"
+        href="styles/light.css?2.1.84" media="screen" />
+      <link rel="stylesheet" v-if="appStateUseFlower || userSettingsUsesSimplifiedTheme" href="styles/simple.css?2.1.84"
         media="screen" />
-      <link rel="stylesheet" v-if="appStateUseFlower" href="styles/flower.css?2.1.83" media="screen" />
+      <link rel="stylesheet" v-if="appStateUseFlower" href="styles/flower.css?2.1.84" media="screen" />
       <link rel="stylesheet"
         v-if="appStateUsePortraitLayout && !userSettingsShowAllCards && appDataPlayerCurrent.role !== 'creator'"
-        href="styles/focus.css?2.1.83" media="screen" />
+        href="styles/focus.css?2.1.84" media="screen" />
       <splash :class="{hide: appStatePageHasLoaded}">
         <!-- <icon class="logo giant"></icon> -->
         <!-- <h2>Facets</h2> -->
       </splash>
       <notification @click="appStateShowNotification = false" :class="{show: appStateShowNotification}">
-        <message :title="getPlayerMessage" v-html="getPlayerMessage"></message>
+        <message :title="getPlayerMessage">
+          <div v-html="getPlayerMessage"></div>
+          <small v-if="getCurrentDaily && getCurrentDaily.solved" class="statlabel">
+            {{getCurrentDaily === getTodaysDaily ? 'Today\'s' :  getCurrentDaily.date}} Daily
+            - Global Stats
+          </small>
+          <stats title="Success rates for solving this puzzle" v-if="getCurrentDaily && getCurrentDaily.solved">
+            <stat>
+              <value>
+                {{!appStateIsGettingDailyGameStats && getCurrentDaily.stats && getCurrentDaily.stats.guesscounts.g1 ? getCurrentDaily.stats.guesscounts.g1 : '-'}}
+              </value>
+              <small>in 1 try</small>
+            </stat>
+            <stat>
+              <value>
+                {{!appStateIsGettingDailyGameStats && getCurrentDaily.stats && getCurrentDaily.stats.guesscounts.g2 ? getCurrentDaily.stats.guesscounts.g2 : '-'}}
+              </value>
+              <small>in 2 tries</small>
+            </stat>
+            <stat>
+              <value>
+                {{!appStateIsGettingDailyGameStats && getCurrentDaily.stats && getCurrentDaily.stats.guesscounts.beyond2 ? getCurrentDaily.stats.guesscounts.beyond2 : '-'}}
+              </value>
+              <small>in 3+ tries</small>
+            </stat>
+            <stat>
+              <value>
+                {{!appStateIsGettingDailyGameStats && getCurrentDaily.stats && getCurrentDaily.stats.avg ? getCurrentDaily.stats.avg : '-'}}
+              </value>
+              <small>avg. tries</small>
+            </stat>
+            <stat>
+              <value>
+                {{!appStateIsGettingDailyGameStats && getCurrentDaily.stats && getCurrentDaily.stats.guesscounts.quits ? getCurrentDaily.stats.guesscounts.quits : '-'}}
+              </value>
+              <small>quit</small>
+            </stat>
+          </stats>
+        </message>
       </notification>
       <notification :class="{show: appStateShowMeta}" class="meta">
         <header>
@@ -108,41 +146,6 @@
             </button>
           </leftright>
         </subtitle>
-      </notification>
-      <notification :class="{show: appStateDailyCongrats}" style="z-index: 3000;">
-        <message>
-          <h2 v-if="getCurrentDaily">{{getCurrentDaily.quit ? 'Oh well' : 'Congrats'}}</h2>
-          <h2>Congrats!</h2>
-          <small class="statlabel"> You've solved {{appDataPlayerStats.total}}
-            {{appDataPlayerStats.total === 0 ? 'Daily Facet' :  'Daily Facets' }} </small>
-          <stats>
-
-            <stat class="boxed">
-              <value>
-                {{!appStateIsGettingDailyGameStats && appDataPlayerStats && appDataPlayerStats.g1 ? appDataPlayerStats.g1 : '-'}}
-              </value>
-              <small>in 1 try</small>
-            </stat>
-            <stat class="boxed">
-              <value>
-                {{!appStateIsGettingDailyGameStats && appDataPlayerStats && appDataPlayerStats.g2 ? appDataPlayerStats.g2 : '-'}}
-              </value>
-              <small>in 2 tries</small>
-            </stat>
-            <stat class="boxed">
-              <value>
-                {{!appStateIsGettingDailyGameStats && appDataPlayerStats && appDataPlayerStats.beyond2 ? appDataPlayerStats.beyond2 : '-'}}
-              </value>
-              <small>in 3+ tries</small>
-            </stat>
-            <stat class="boxed">
-              <value>
-                {{!appStateIsGettingDailyGameStats && appDataPlayerStats && appDataPlayerStats.quit ? appDataPlayerStats.quit : '-'}}
-              </value>
-              <small>quit</small>
-            </stat>
-          </stats>
-        </message>
       </notification>
       <modal v-if="appStateShowTutorial" class="tutorial">
         <section>
@@ -436,9 +439,8 @@
           <h2>The Daily Facet</h2>
 
           <small class="statlabel"> You've solved {{appDataPlayerStats.total}}
-            {{appDataPlayerStats.total === 0 ? 'Daily Facet' :  'Daily Facets' }} </small>
+            {{appDataPlayerStats.total === 1 ? 'Daily Facet' :  'Daily Facets' }} </small>
           <stats>
-
             <stat class="boxed">
               <value>
                 {{!appStateIsGettingDailyGameStats && appDataPlayerStats && appDataPlayerStats.g1 ? appDataPlayerStats.g1 : '-'}}
@@ -474,9 +476,9 @@
             <button v-if="!Navigator.online" @click="GetDailyGames">Retry</button>
           </message>
           <gamelinks v-if="!appStateIsGettingDailyGames && !appStateIsGettingUserStats">
-            <gamelink @click="HandleGameLinkClick(event, game)" :class="{done: game.solved, quit: game.quit}"
+            <gamelink :class="{done: game.solved, quit: game.quit}"
               v-for="(game, index) in getDailyGamesWithWordSetNames">
-              <p>
+              <p @click="HandleGameLinkClick(event, game)">
                 <a>
                   <small>
                     <dot
@@ -507,7 +509,7 @@
               </p>
 
               <!-- <small class="statlabel"> {{game === getTodaysDaily ? 'Today\'s' : game.date}} player counts </small> -->
-              <stats title="Success rates for sovling this puzzle">
+              <stats title="Success rates for solving this puzzle">
                 <stat>
                   <value>
                     {{!appStateIsGettingDailyGameStats && game.stats && game.stats.guesscounts.g1 ? game.stats.guesscounts.g1 : '-'}}
@@ -529,7 +531,13 @@
                 <stat>
                   <value>{{!appStateIsGettingDailyGameStats && game.stats && game.stats.avg ? game.stats.avg : '-'}}
                   </value>
-                  <small>Avg. tries</small>
+                  <small>avg. tries</small>
+                </stat>
+                <stat>
+                  <value>
+                    {{!appStateIsGettingDailyGameStats && game.stats && game.stats.guesscounts.quits ? game.stats.guesscounts.quits : '-'}}
+                  </value>
+                  <small>quit</small>
                 </stat>
               </stats>
             </gamelink>
@@ -743,15 +751,15 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.1.83" type="text/javascript"></script>
-    <script src="models/LanguageObject.min.js?2.1.83" type="text/javascript"></script>
-    <script src="models/ProgressMessageObject.min.js?2.1.83" type="text/javascript"></script>
-    <script src="models/WordSetObject.min.js?2.1.83" type="text/javascript"></script>
-    <script src="models/WordObject.min.js?2.1.83" type="text/javascript"></script>
-    <script src="models/CardObject.min.js?2.1.83" type="text/javascript"></script>
-    <script src="models/PlayerObject.min.js?2.1.83" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.1.84" type="text/javascript"></script>
+    <script src="models/LanguageObject.min.js?2.1.84" type="text/javascript"></script>
+    <script src="models/ProgressMessageObject.min.js?2.1.84" type="text/javascript"></script>
+    <script src="models/WordSetObject.min.js?2.1.84" type="text/javascript"></script>
+    <script src="models/WordObject.min.js?2.1.84" type="text/javascript"></script>
+    <script src="models/CardObject.min.js?2.1.84" type="text/javascript"></script>
+    <script src="models/PlayerObject.min.js?2.1.84" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.1.83" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.1.84" type="text/javascript"></script>
   </body>
 
 </html>
