--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       content="Facets, Facets!, Big Tent Games, Games, Casual game, Puzzle game, Word game, Boardgame, Wil Voss" />
     <meta name="description" content="Facets: A Puzzle Game of Words and Wits!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.1.91" />
+    <link rel="manifest" href="manifest.webmanifest?2.1.92" />
 
     <link rel="apple-touch-icon" sizes="120x120" href="images/icon180.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="images/icon180.png" />
@@ -39,9 +39,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="128x128" href="favicon.png" />
 
-    <link rel="stylesheet" href="styles/normalize.css?2.1.91" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.1.91" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.1.91" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.1.92" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.1.92" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.1.92" media="screen" />
   </head>
 
   <body>
@@ -62,13 +62,13 @@
       </preload>
       <link rel="stylesheet"
         v-if="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme)"
-        href="styles/light.css?2.1.91" media="screen" />
-      <link rel="stylesheet" v-if="appStateUseFlower || userSettingsUsesSimplifiedTheme" href="styles/simple.css?2.1.91"
+        href="styles/light.css?2.1.92" media="screen" />
+      <link rel="stylesheet" v-if="appStateUseFlower || userSettingsUsesSimplifiedTheme" href="styles/simple.css?2.1.92"
         media="screen" />
-      <link rel="stylesheet" v-if="appStateUseFlower" href="styles/flower.css?2.1.91" media="screen" />
+      <link rel="stylesheet" v-if="appStateUseFlower" href="styles/flower.css?2.1.92" media="screen" />
       <link rel="stylesheet"
         v-if="appStateUsePortraitLayout && !userSettingsShowAllCards && appDataPlayerCurrent.role !== 'creator'"
-        href="styles/focus.css?2.1.91" media="screen" />
+        href="styles/focus.css?2.1.92" media="screen" />
       <splash :class="{hide: appStatePageHasLoaded}">
         <!-- <icon class="logo giant"></icon> -->
         <!-- <h2>Facets</h2> -->
@@ -76,11 +76,12 @@
       <notification @click="appStateShowNotification = false" :class="{show: appStateShowNotification}">
         <message :title="getPlayerMessage">
           <div v-html="getPlayerMessage"></div>
-          <small v-if="getCurrentDaily && getCurrentDaily.solved" class="statlabel">
+          <small v-if="!userSettingsHideStats && getCurrentDaily && getCurrentDaily.solved" class="statlabel">
             {{getCurrentDaily === getTodaysDaily ? 'Today\'s' :  getCurrentDaily.date}} Daily
             - Global Stats
           </small>
-          <stats title="Success rates for solving this puzzle" v-if="getCurrentDaily && getCurrentDaily.solved">
+          <stats title="Success rates for solving this puzzle"
+            v-if="!userSettingsHideStats && getCurrentDaily && getCurrentDaily.solved">
             <stat>
               <value>
                 {{!appStateIsGettingDailyGameStats && getCurrentDaily.stats && getCurrentDaily.stats.guesscounts.g1 ? getCurrentDaily.stats.guesscounts.g1 : '-'}}
@@ -323,6 +324,11 @@
             matches
             on all your browsers. Write this ID down before changing it.</small>
           <h3>Appearance</h3>
+          <checkbox :class="{on: tempUserSettingsHideStats}" @click="ToggleTempHideStats()">
+            Hide stats
+            <toggle></toggle>
+          </checkbox>
+          <small>Enable this if you don't want to see statistics associated with the Daily Facet.</small>
           <checkbox :class="{on: tempUserSettingsUsesLightTheme}" @click="ToggleTempUseLightTheme()">
             Light theme
             <toggle></toggle>
@@ -439,9 +445,9 @@
         <section>
           <h2>The Daily Facet</h2>
 
-          <small class="statlabel"> You've solved {{appDataPlayerStats.total}}
+          <small v-if="!userSettingsHideStats" class="statlabel"> You've solved {{appDataPlayerStats.total}}
             {{appDataPlayerStats.total === 1 ? 'Daily Facet' :  'Daily Facets' }} </small>
-          <stats>
+          <stats v-if="!userSettingsHideStats">
             <stat class="boxed">
               <value>
                 {{!appStateIsGettingDailyGameStats && appDataPlayerStats && appDataPlayerStats.g1 ? appDataPlayerStats.g1 : '-'}}
@@ -510,7 +516,7 @@
               </p>
 
               <!-- <small class="statlabel"> {{game === getTodaysDaily ? 'Today\'s' : game.date}} player counts </small> -->
-              <stats title="Success rates for solving this puzzle">
+              <stats v-if="!userSettingsHideStats" title="Success rates for solving this puzzle">
                 <stat>
                   <value>
                     {{!appStateIsGettingDailyGameStats && game.stats && game.stats.guesscounts.g1 ? game.stats.guesscounts.g1 : '-'}}
@@ -752,15 +758,15 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.1.91" type="text/javascript"></script>
-    <script src="models/LanguageObject.min.js?2.1.91" type="text/javascript"></script>
-    <script src="models/ProgressMessageObject.min.js?2.1.91" type="text/javascript"></script>
-    <script src="models/WordSetObject.min.js?2.1.91" type="text/javascript"></script>
-    <script src="models/WordObject.min.js?2.1.91" type="text/javascript"></script>
-    <script src="models/CardObject.min.js?2.1.91" type="text/javascript"></script>
-    <script src="models/PlayerObject.min.js?2.1.91" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.1.92" type="text/javascript"></script>
+    <script src="models/LanguageObject.min.js?2.1.92" type="text/javascript"></script>
+    <script src="models/ProgressMessageObject.min.js?2.1.92" type="text/javascript"></script>
+    <script src="models/WordSetObject.min.js?2.1.92" type="text/javascript"></script>
+    <script src="models/WordObject.min.js?2.1.92" type="text/javascript"></script>
+    <script src="models/CardObject.min.js?2.1.92" type="text/javascript"></script>
+    <script src="models/PlayerObject.min.js?2.1.92" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.1.91" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.1.92" type="text/javascript"></script>
   </body>
 
 </html>
