--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       content="Facets, Facets!, Big Tent Games, Games, Casual game, Puzzle game, Word game, Boardgame, Wil Voss" />
     <meta name="description" content="Facets: A Puzzle Game of Words and Wits!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.1.93" />
+    <link rel="manifest" href="manifest.webmanifest?2.1.94" />
 
     <link rel="apple-touch-icon" sizes="120x120" href="images/icon180.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="images/icon180.png" />
@@ -39,9 +39,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="128x128" href="favicon.png" />
 
-    <link rel="stylesheet" href="styles/normalize.css?2.1.93" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.1.93" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.1.93" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.1.94" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.1.94" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.1.94" media="screen" />
   </head>
 
   <body>
@@ -62,13 +62,13 @@
       </preload>
       <link rel="stylesheet"
         v-if="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme)"
-        href="styles/light.css?2.1.93" media="screen" />
-      <link rel="stylesheet" v-if="appStateUseFlower || userSettingsUsesSimplifiedTheme" href="styles/simple.css?2.1.93"
+        href="styles/light.css?2.1.94" media="screen" />
+      <link rel="stylesheet" v-if="appStateUseFlower || userSettingsUsesSimplifiedTheme" href="styles/simple.css?2.1.94"
         media="screen" />
-      <link rel="stylesheet" v-if="appStateUseFlower" href="styles/flower.css?2.1.93" media="screen" />
+      <link rel="stylesheet" v-if="appStateUseFlower" href="styles/flower.css?2.1.94" media="screen" />
       <link rel="stylesheet"
         v-if="appStateUsePortraitLayout && !userSettingsShowAllCards && appDataPlayerCurrent.role !== 'creator'"
-        href="styles/focus.css?2.1.93" media="screen" />
+        href="styles/focus.css?2.1.94" media="screen" />
       <splash :class="{hide: appStatePageHasLoaded}">
         <!-- <icon class="logo giant"></icon> -->
         <!-- <h2>Facets</h2> -->
@@ -136,7 +136,7 @@
             Create your own
             <icon class="empty"></icon>
           </button>
-          <button class="small" @click="ToggleShowGlobalCreated(event)">Recent puzzles</button>
+          <button class="small" @click="ToggleShowGlobalCreated(event)">Player created</button>
           <button class="small" @click="ToggleShowTutorial(event)">How to play</button>
           <button class="small" @click="ShowSettings(event)">Settings</button>
           <leftright>
@@ -251,6 +251,7 @@
           <credit>Perdis Hawkins</credit>
           <credit>Jerry Hoffmeister</credit>
           <credit>Chris Lehan</credit>
+          <credit>Stacey Rea</credit>
           <credit>AJ Rogers</credit>
           <credit>Elaine Soennichsen</credit>
           <credit>Kathleen Voss</credit>
@@ -403,8 +404,8 @@
       </modal>
       <modal v-if="appStateShowGlobalCreated">
         <section>
-          <h2>Recent puzzles</h2>
-          <p>Play the most recent puzzles created by players from around the world.</p>
+          <h2>Player created</h2>
+          <p>Play the most recent puzzles created by anonymous players from around the world.</p>
 
           <leftright style="margin: 20px 0">
             <a class="padded" :class="{disabled: appStateIsGettingLast10Games}"
@@ -417,7 +418,7 @@
           <message style="padding: calc(2 * var(--defaultGap)) 0"
             v-if="!appStateIsGettingLast10Games && getCreatedGamesWithWordSetNames.length === 0">
             <p>😢</p>
-            <p>There are no recent puzzles to display.</p>
+            <p>There are no player puzzles to display.</p>
             <button style="margin-top: 20px; border: 1px solid hsla(var(--linkColorDarkHSL), 0.75)"
               @click="ToggleShowGlobalCreated(); HandleNewGameClick()">Create One!</button>
           </message>
@@ -440,14 +441,15 @@
           </controls>
         </section>
       </modal>
-
       <modal v-if="appStateShowDailyGames">
         <section>
           <h2>The Daily Facet</h2>
+          <p>These AI-solved puzzles can be quite hard. If you solve one, challenge your friends to do better!</p>
 
-          <small v-if="!userSettingsHideStats" class="statlabel"> You've solved {{appDataPlayerStats.total}}
+          <small v-if="!userSettingsHideStats" class="statlabel" style="margin-top: var(--defaultGap)"> You've solved
+            {{appDataPlayerStats.total}}
             {{appDataPlayerStats.total === 1 ? 'Daily Facet' :  'Daily Facets' }} </small>
-          <stats v-if="!userSettingsHideStats">
+          <stats v-if="!userSettingsHideStats" style="padding-top: 0px;">
             <stat class="boxed">
               <value>
                 {{!appStateIsGettingDailyGameStats && appDataPlayerStats && appDataPlayerStats.g1 ? appDataPlayerStats.g1 : '-'}}
@@ -473,7 +475,6 @@
               <small>quit</small>
             </stat>
           </stats>
-          <p>These AI-solved puzzles can be quite hard. If you solve one, challenge your friends to do better!</p>
 
           <icon v-show="appStateIsGettingDailyGames " style="position: relative" class="spinner show"></icon>
           <message style="padding: calc(2 * var(--defaultGap)) 0"
@@ -758,15 +759,15 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.1.93" type="text/javascript"></script>
-    <script src="models/LanguageObject.min.js?2.1.93" type="text/javascript"></script>
-    <script src="models/ProgressMessageObject.min.js?2.1.93" type="text/javascript"></script>
-    <script src="models/WordSetObject.min.js?2.1.93" type="text/javascript"></script>
-    <script src="models/WordObject.min.js?2.1.93" type="text/javascript"></script>
-    <script src="models/CardObject.min.js?2.1.93" type="text/javascript"></script>
-    <script src="models/PlayerObject.min.js?2.1.93" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.1.94" type="text/javascript"></script>
+    <script src="models/LanguageObject.min.js?2.1.94" type="text/javascript"></script>
+    <script src="models/ProgressMessageObject.min.js?2.1.94" type="text/javascript"></script>
+    <script src="models/WordSetObject.min.js?2.1.94" type="text/javascript"></script>
+    <script src="models/WordObject.min.js?2.1.94" type="text/javascript"></script>
+    <script src="models/CardObject.min.js?2.1.94" type="text/javascript"></script>
+    <script src="models/PlayerObject.min.js?2.1.94" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.1.93" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.1.94" type="text/javascript"></script>
   </body>
 
 </html>
