--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       content="Facets, Facets!, Big Tent Games, Games, Casual game, Puzzle game, Word game, Boardgame, Wil Voss" />
     <meta name="description" content="Facets: A Puzzle Game of Words and Wits!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.1.99" />
+    <link rel="manifest" href="manifest.webmanifest?2.2.00" />
 
     <link rel="apple-touch-icon" sizes="120x120" href="images/icon180.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="images/icon180.png" />
@@ -39,9 +39,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="128x128" href="favicon.png" />
 
-    <link rel="stylesheet" href="styles/normalize.css?2.1.99" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.1.99" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.1.99" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.2.00" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.2.00" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.00" media="screen" />
   </head>
 
   <body>
@@ -62,13 +62,13 @@
       </preload>
       <link rel="stylesheet"
         v-if="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme)"
-        href="styles/light.css?2.1.99" media="screen" />
-      <link rel="stylesheet" v-if="appStateUseFlower || userSettingsUsesSimplifiedTheme" href="styles/simple.css?2.1.99"
+        href="styles/light.css?2.2.00" media="screen" />
+      <link rel="stylesheet" v-if="appStateUseFlower || userSettingsUsesSimplifiedTheme" href="styles/simple.css?2.2.00"
         media="screen" />
-      <link rel="stylesheet" v-if="appStateUseFlower" href="styles/flower.css?2.1.99" media="screen" />
+      <link rel="stylesheet" v-if="appStateUseFlower" href="styles/flower.css?2.2.00" media="screen" />
       <link rel="stylesheet"
         v-if="appStateUsePortraitLayout && !userSettingsShowAllCards && appDataPlayerCurrent.role !== 'creator'"
-        href="styles/focus.css?2.1.99" media="screen" />
+        href="styles/focus.css?2.2.00" media="screen" />
       <splash :class="{hide: appStatePageHasLoaded}">
         <!-- <icon class="logo giant"></icon> -->
         <!-- <h2>Facets</h2> -->
@@ -136,16 +136,14 @@
             Create your own
             <icon class="empty"></icon>
           </button>
-          <button class="small" @click="ToggleShowGlobalCreated(event)">Player created</button>
+          <button class="small" @click="ToggleShowGlobalCreated(event)">Player puzzles</button>
           <button class="small" @click="ToggleShowTutorial(event)">How to play</button>
           <button class="small" @click="ShowSettings(event)">Settings</button>
-          <leftright>
-            <button class="small" @click="ToggleShowInfo(event)">Credits</button>
-            <button class="small highlightText" @click="window.open('https://www.buymeacoffee.com/wilvoss', '_blank')">
-              <icon class="bmc small highlightBackground"></icon>
-              Donate!
-            </button>
-          </leftright>
+          <button class="small" @click="ToggleShowInfo(event)">Credits</button>
+          <button class="small highlightText" @click="window.open('https://www.buymeacoffee.com/wilvoss', '_blank')">
+            <icon class="bmc small highlightBackground"></icon>
+            Buy Me a Coffee!
+          </button>
         </subtitle>
       </notification>
       <modal v-if="appStateShowTutorial" class="tutorial">
@@ -259,10 +257,8 @@
 
           <h3>How can you help?</h3>
           <a class="padded" @click="ShareText('https://bigtentgames.com/facets', '')">Share with friends!</a>
-          <a class="padded" :href="'mailto:bigtentgames@icloud.com?subject=Feedback - Facets! v' + appDataVersion">Give
-            feedback!</a>
+          <a class="padded" href="https://discord.gg/94waSuKW" target="_blank">Join our Discord!</a>
           <a class="padded" href="https://github.com/wilvoss/facets/issues" target="_blank">Submit a bug!</a>
-          <a class="padded" href="https://www.buymeacoffee.com/wilvoss" target="_blank">Buy me a coffee! </a>
           <h3></h3>
           <version>
             <span>&copy;{{new Date().getFullYear()}} Big Tent Games</span>
@@ -404,8 +400,8 @@
       </modal>
       <modal v-if="appStateShowGlobalCreated">
         <section>
-          <h2>Player created</h2>
-          <p>Play the most recent puzzles created by anonymous players from around the world.</p>
+          <h2>Player puzzles</h2>
+          <p>Play recent puzzles created by anonymous players from around the world.</p>
 
           <leftright style="margin: 20px 0">
             <a class="padded" :class="{disabled: appStateIsGettingLast10Games}"
@@ -759,15 +755,15 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.1.99" type="text/javascript"></script>
-    <script src="models/LanguageObject.min.js?2.1.99" type="text/javascript"></script>
-    <script src="models/ProgressMessageObject.min.js?2.1.99" type="text/javascript"></script>
-    <script src="models/WordSetObject.min.js?2.1.99" type="text/javascript"></script>
-    <script src="models/WordObject.min.js?2.1.99" type="text/javascript"></script>
-    <script src="models/CardObject.min.js?2.1.99" type="text/javascript"></script>
-    <script src="models/PlayerObject.min.js?2.1.99" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.2.00" type="text/javascript"></script>
+    <script src="models/LanguageObject.min.js?2.2.00" type="text/javascript"></script>
+    <script src="models/ProgressMessageObject.min.js?2.2.00" type="text/javascript"></script>
+    <script src="models/WordSetObject.min.js?2.2.00" type="text/javascript"></script>
+    <script src="models/WordObject.min.js?2.2.00" type="text/javascript"></script>
+    <script src="models/CardObject.min.js?2.2.00" type="text/javascript"></script>
+    <script src="models/PlayerObject.min.js?2.2.00" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.1.99" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.2.00" type="text/javascript"></script>
   </body>
 
 </html>
