--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       content="Facets, Facets!, Big Tent Games, Games, Casual game, Puzzle game, Word game, Boardgame, Wil Voss" />
     <meta name="description" content="Facets: A Puzzle Game of Words and Wits!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.2.01" />
+    <link rel="manifest" href="manifest.webmanifest?2.2.02" />
 
     <link rel="apple-touch-icon" sizes="120x120" href="images/icon180.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="images/icon180.png" />
@@ -39,9 +39,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="128x128" href="favicon.png" />
 
-    <link rel="stylesheet" href="styles/normalize.css?2.2.01" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.2.01" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.01" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.2.02" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.2.02" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.02" media="screen" />
   </head>
 
   <body>
@@ -62,13 +62,13 @@
       </preload>
       <link rel="stylesheet"
         v-if="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme)"
-        href="styles/light.css?2.2.01" media="screen" />
-      <link rel="stylesheet" v-if="appStateUseFlower || userSettingsUsesSimplifiedTheme" href="styles/simple.css?2.2.01"
+        href="styles/light.css?2.2.02" media="screen" />
+      <link rel="stylesheet" v-if="appStateUseFlower || userSettingsUsesSimplifiedTheme" href="styles/simple.css?2.2.02"
         media="screen" />
-      <link rel="stylesheet" v-if="appStateUseFlower" href="styles/flower.css?2.2.01" media="screen" />
+      <link rel="stylesheet" v-if="appStateUseFlower" href="styles/flower.css?2.2.02" media="screen" />
       <link rel="stylesheet"
         v-if="appStateUsePortraitLayout && !userSettingsShowAllCards && appDataPlayerCurrent.role !== 'creator'"
-        href="styles/focus.css?2.2.01" media="screen" />
+        href="styles/focus.css?2.2.02" media="screen" />
       <splash :class="{hide: appStatePageHasLoaded}">
         <!-- <icon class="logo giant"></icon> -->
         <!-- <h2>Facets</h2> -->
@@ -128,6 +128,7 @@
           <button v-if="currentGameSolutionGuessing !== currentGameSolutionActual" class="small highlightText"
             @click="ToggleShowMeta(event)">Resume</button>
           <button v-if="vsShowDaily" class="small" @click="ToggleShowDailyGames(event)">
+            <beta></beta>
             The Daily Facet
             <badge :class="{show: getDailyIsFreshToday}">{{appDataNumberOfNewDailies}}</badge>
           </button>
@@ -440,8 +441,13 @@
       <modal v-if="appStateShowDailyGames">
         <section>
           <h2>The Daily Facet</h2>
+          <p>
+            <beta>
+              This feature is in beta. <a href="https://github.com/wilvoss/facets/issues" target="_blank">
+                Report issues here</a>.
+            </beta>
+          </p>
           <p>These AI-solved puzzles can be quite hard. If you solve one, challenge your friends to do better!</p>
-
           <small v-if="!userSettingsHideStats" class="statlabel" style="margin-top: var(--defaultGap)"> You've solved
             {{appDataPlayerStats.total}}
             {{appDataPlayerStats.total === 1 ? 'Daily Facet' :  'Daily Facets' }} </small>
@@ -755,15 +761,15 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.2.01" type="text/javascript"></script>
-    <script src="models/LanguageObject.min.js?2.2.01" type="text/javascript"></script>
-    <script src="models/ProgressMessageObject.min.js?2.2.01" type="text/javascript"></script>
-    <script src="models/WordSetObject.min.js?2.2.01" type="text/javascript"></script>
-    <script src="models/WordObject.min.js?2.2.01" type="text/javascript"></script>
-    <script src="models/CardObject.min.js?2.2.01" type="text/javascript"></script>
-    <script src="models/PlayerObject.min.js?2.2.01" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.2.02" type="text/javascript"></script>
+    <script src="models/LanguageObject.min.js?2.2.02" type="text/javascript"></script>
+    <script src="models/ProgressMessageObject.min.js?2.2.02" type="text/javascript"></script>
+    <script src="models/WordSetObject.min.js?2.2.02" type="text/javascript"></script>
+    <script src="models/WordObject.min.js?2.2.02" type="text/javascript"></script>
+    <script src="models/CardObject.min.js?2.2.02" type="text/javascript"></script>
+    <script src="models/PlayerObject.min.js?2.2.02" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.2.01" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.2.02" type="text/javascript"></script>
   </body>
 
 </html>
