--- a/index.html
+++ b/index.html
@@ -128,7 +128,6 @@
           <button v-if="currentGameSolutionGuessing !== currentGameSolutionActual" class="small highlightText"
             @click="ToggleShowMeta(event)">Resume</button>
           <button v-if="vsShowDaily" class="small" @click="ToggleShowDailyGames(event)">
-            <beta></beta>
             The Daily Facet
             <badge :class="{show: getDailyIsFreshToday}">{{appDataNumberOfNewDailies}}</badge>
           </button>
@@ -171,9 +170,10 @@
             <p>Hit the <cta>{{appDataActionButtonTexts.guess}}</cta> or <cta>{{appDataActionButtonTexts.reply}}</cta>
               button to check your solution.</p>
           </hidden>
+
           <h3 v-if="!appStateShowCreateOOBE">Creating</h3>
           <p>When creating a new puzzle, it's your job to come up with clues that "connect" the four word-pairs that are
-            displayed on the edges of the gem.</p>
+            displayed on the edges of the gem. These characters are not allowed: ? : = and &</p>
           <img :src="'./images/tut-7' + (userSettingsUsesLightTheme ? '-light' : '') + '.svg'" />
           <p>When you are satisfied with your 4 clues, hit the <cta>{{appDataActionButtonTexts.send}}</cta> button. The
             puzzle will scramble and you'll be able to share a message with your friend that contains a link to the
@@ -772,7 +772,7 @@
     <script src="models/CardObject.min.js?2.2.06" type="text/javascript"></script>
     <script src="models/PlayerObject.min.js?2.2.06" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.2.09" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.2.10" type="text/javascript"></script>
   </body>
 
 </html>
