--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
           <h2>The Daily Facet</h2>
           <p>
             <beta>
-              This feature is in beta. <a href="https://github.com/wilvoss/facets/issues" target="_blank">
+              This feature is in BETA. <a href="https://github.com/wilvoss/facets/issues" target="_blank">
                 Report issues here</a> or text me if you know me!
             </beta>
           </p>
@@ -772,7 +772,7 @@
     <script src="models/CardObject.min.js?2.2.06" type="text/javascript"></script>
     <script src="models/PlayerObject.min.js?2.2.06" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.2.10" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.2.11" type="text/javascript"></script>
   </body>
 
 </html>
